--- a/private-hello/index.html
+++ b/private-hello/index.html
@@ -76,7 +76,7 @@
           <b>
             Author :
           </b>
-          Nicolas Remond
+          Lorenzo Xavier
         </p>
         <section class="versions" id="versions">
           <div id="v0.4.5" onclick="load_readme('v0.4.5', scroll_to_div=true)">
