--- a/pkg_template.html
+++ b/pkg_template.html
@@ -59,7 +59,7 @@
     </pre>
     
     <pre id='installcmd'>
-      <code>pip install _package_name --extra-index-url https://astariul.github.io/github-hosted-pypi/</code>
+      <code>pip install _package_name --extra-index-url https://lorenzoppx.github.io/IndexPypi/</code>
     </pre>
     
     <hr />
