:package: [:robot:] Register package in PyPi index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
    <h6 class="text-header">
     Packages
    </h6>
+   <a class="card" href="fordpippy/">
+    fordpippy
+    <span>
+    </span>
+    <span class="version">
+     1.0.2
+    </span>
+    <br/>
+    <span class="description">
+     Completily processing library python
+    </span>
+   </a>
    <a class="card" href="fordpip/">
     fordpip
     <span>
